<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_AboutMe" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/menu_formation" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_how_to_reg_24"
            android:title="@string/menu_competence" />
        <item
            android:id="@+id/nav_projet"
            android:icon="@drawable/ic_baseline_done_all_24"
            android:title="@string/menu_projet" />
        <item
            android:id="@+id/nav_divers"
            android:icon="@drawable/ic_baseline_divers"
            android:title="@string/menu_divers" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_contact"
            android:title="@string/menu_contact" />
    </group>
</menu>