<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.porfolioandroid.ui.home.HomeFragment"
        android:label="@string/menu_AboutMe"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.porfolioandroid.ui.gallery.GalleryFragment"
        android:label="@string/menu_formation"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.porfolioandroid.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_competence"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.porfolioandroid.ui.contact.fragment_contact"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>